# TimeApp

./: CMakeLists.txt  README.md
lib/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_textedit.h
lib/imgui/backends/: imgui_impl_allegro5.cpp  imgui_impl_dx10.cpp  imgui_impl_dx11.cpp  imgui_impl_dx12.cpp  imgui_impl_dx9.cpp  imgui_impl_glfw.cpp  imgui_impl_metal.mm  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h  imgui_impl_osx.mm  imgui_impl_sdl3.cpp  imgui_impl_sdlgpu3.cpp  imgui_impl_sdlrenderer3.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_win32.cpp
lib/imgui/docs/: BACKENDS.md  CHANGELOG.txt  EXAMPLES.md  FAQ.md  FONTS.md  README.md  TODO.txt
src/: NTPClient.cpp  NTPClient.h  TimeApplication.cpp  TimeApplication.h  Timer.cpp  Timer.h  WindowsHeaders.h  main.cpp  main_imgui.cpp  main_orig.cpp
src/UI/: DarkTheme.cpp  DarkTheme.h  MainWindow.cpp  MainWindow.h
